Add filter to not save unfilled questions.